# opspilot

./: .env.example  .gitignore  README.md  check_dependencies.py  pyproject.toml  requirements.txt  test_opspilot.py
examples/basic/: quickstart.py
opspilot/: __init__.py  cli.py
opspilot/agents/: context.py  launcher.py
opspilot/embedding/: chunker.py
opspilot/ingestion/: ingestor.py
opspilot/storage/: vector_store.py
opspilot/tasks/: parser.py
tests/: test_ingestion.py
